[gd_scene load_steps=10 format=3 uid="uid://brjsptn62qe8p"]

[ext_resource type="Texture2D" uid="uid://xuriaab82373" path="res://assets/objects/basic_grass_biom_things.png" id="1_a8qts"]
[ext_resource type="Shader" uid="uid://c3wbmadrjwgt2" path="res://scenes/objects/trees/tree_shake.gdshader" id="1_w057i"]
[ext_resource type="Script" uid="uid://cx55hdwbkce4y" path="res://scenes/objects/trees/small_tree.gd" id="2_g5iuu"]
[ext_resource type="PackedScene" uid="uid://153oswypblu1" path="res://scenes/components/hurt_component.tscn" id="2_xyb6m"]
[ext_resource type="PackedScene" uid="uid://lmiuyqu2nw0s" path="res://scenes/components/damage_component.tscn" id="3_au4vd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_skbjc"]
resource_local_to_scene = true
shader = ExtResource("1_w057i")
shader_parameter/shake_intensity = 0.0
shader_parameter/shake_speed = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_xyb6m"]
atlas = ExtResource("1_a8qts")
region = Rect2(0, 0, 16, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_au4vd"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_au4vd"]
size = Vector2(6, 16)

[node name="SmallTree" type="Sprite2D"]
material = SubResource("ShaderMaterial_skbjc")
texture = SubResource("AtlasTexture_xyb6m")
offset = Vector2(0, -10)
script = ExtResource("2_g5iuu")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_au4vd")

[node name="HurtComponent" parent="." instance=ExtResource("2_xyb6m")]
tool = 1

[node name="HurtComponentCollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_au4vd")

[node name="DamageComponent" parent="." instance=ExtResource("3_au4vd")]
max_damage = 3
